[package]
name = "noctis-finance"
version = "0.1.0"
description = "Confidential transfers on Solana using Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "noctis_finance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"

